Avoid undefined behavior, from Chris Spiegel in PR 43860.